fix issue 5,6,8: [5]Selection box for number of comments does not work [6]It seems multiple sessions dont work [8]Login screen not centered in chrome
git-svn-id: https://svn.codespot.com/a/apache-extras.org/hupa-evo/trunk@98 14226458-c3ec-645b-2b44-f65113ec66be

--- a/client/src/main/webapp/Hupa.css
+++ b/client/src/main/webapp/Hupa.css
@@ -162,9 +162,8 @@ div.hupa-bottom {
 }
 /************[ view: LoginView ]*******************/
 .hupa-login {
-	margin-top:10px;
-	margin-left:auto;
-	margin-right:auto;
+	margin: 10pt auto;
+	width: 20%;
     text-align: right;
     position: relative;
     left: 50%;
